# ermine

./: .ghci  .gitignore  .travis.yml  .vim.custom  CHANGELOG.markdown  Ermine-Builtin-Core.html  Ermine-Builtin-Global.html  Ermine-Builtin-Head.html  Ermine-Builtin-Pat.html  Ermine-Builtin-Pattern.html  Ermine-Builtin-Term.html  Ermine-Builtin-Type.html  Ermine-Console-Command-Common.html  Ermine-Console-Command-Kind.html  Ermine-Console-Command.html  Ermine-Console-Completion.html  Ermine-Console-Options.html  Ermine-Console-State.html  Ermine-Console-Unicode.html  Ermine-Constraint-Env.html  Ermine-Constraint-Simplification.html  Ermine-Core-Compiler.html  Ermine-Core-Lint.html  Ermine-Core-Optimizer.html  Ermine-Core.html  Ermine-Diagnostic.html  Ermine-Digest.html  Ermine-Global.html  Ermine-Inference-Discharge.html  Ermine-Inference-Kind.html  Ermine-Inference-Type.html  Ermine-Inference-Witness.html  Ermine-Interpreter.html  Ermine-Kind-Inference.html  Ermine-Kind-Parser.html  Ermine-Kind-Unification.html  Ermine-Kind.html  Ermine-Mangled.html  Ermine-Match.html  Ermine-Matching.html  (+235 more)
Ermine/: .Core.hs.swp  App.hs  Core.hs  Digest.hsc  Fun.hs  Global.hs  Kind.hs  Mangled.hs  Meta.hs  Pat.hs  Prim.hs  Rendering.hs  Scope.hs  Syntax.hs  Term.hs  Trifunctor.hs  Type.hs  Unification.hs  Variable.hs
Ermine/Kind/: Inference.hs
Ermine/Type/: Builtin.hs
data/: logo.txt  logos.txt
echo/: Main.hs
etc/: logo.txt  logos.txt
exe/core-echo/: Main.hs
exe/repl/: Main.hs
opt/ekg/Ermine/: Monitor.hs
opt/no-ekg/Ermine/: Monitor.hs
properties/: Arbitrary.hs  Binary.hs  Inference.hs  PatCompiler.hs  Var.hs
repl/: Main.hs
scripts/: overview.sh
src/: Ermine-Builtin-Core.html  Ermine-Builtin-Global.html  Ermine-Builtin-Head.html  Ermine-Builtin-Pat.html  Ermine-Builtin-Pattern.html  Ermine-Builtin-Term.html  Ermine-Builtin-Type.html  Ermine-Console-Command-Common.html  Ermine-Console-Command-Kind.html  Ermine-Console-Command.html  Ermine-Console-Completion.html  Ermine-Console-Options.html  Ermine-Console-State.html  Ermine-Console-Unicode.html  Ermine-Constraint-Env.html  Ermine-Constraint-Simplification.html  Ermine-Core-Compiler.html  Ermine-Core-Lint.html  Ermine-Core-Optimizer.html  Ermine-Core.html  Ermine-Diagnostic.html  Ermine-Digest.html  Ermine-Global.html  Ermine-Inference-Discharge.html  Ermine-Inference-Kind.html  Ermine-Inference-Type.html  Ermine-Inference-Witness.html  Ermine-Interpreter.html  Ermine-Kind-Inference.html  Ermine-Kind-Parser.html  Ermine-Kind-Unification.html  Ermine-Kind.html  Ermine-Mangled.html  Ermine-Match.html  Ermine-Matching.html  Ermine-Meta.html  Ermine-Monitor-Combinators.html  Ermine-Monitor-Exception.html  Ermine-Monitor-Options.html  Ermine-Monitor.html  (+75 more)
src-opt/ekg/Ermine/: Monitor.hs
src-opt/no-ekg/Ermine/: Monitor.hs
src/Ermine/: Constraint.hs  Core.hs  Diagnostic.hs  Digest.hsc  Eval.hs  Global.hs  Instances.hs  Interpreter.hs  Kind.hs  Match.hs  Matching.hs  Meta.hs  Monitor.hs  Optimizer.hs  Parser.hs  Pattern.hs  Pretty.hs  Prim.hs  Rendering.hs  Scope.hs  Sharing.hs  Syntax.hs  Term.hs  Type.hs  Version.hs
src/Ermine/Binary/: Get.hs  Put.hs
src/Ermine/Builtin/: Core.hs  Global.hs  Head.hs  Pat.hs  Pattern.hs  Term.hs  Type.hs
src/Ermine/Console/: Action.hs  Command.hs  Completion.hs  Module.hs  Options.hs  State.hs  Unicode.hsc
src/Ermine/Constraint/: Env.hs  Simplification.hs
src/Ermine/Core/: Assembler.hs  Compiler.hs  Lint.hs  Module.hs  Optimizer.hs
src/Ermine/Inference/: Discharge.hs  Kind.hs  Module.hs  Type.hs  Witness.hs
src/Ermine/Kind/: Inference.hs  Parser.hs  Unification.hs
src/Ermine/Loader/: Core.hs  Filesystem.hs  MapCache.hs
src/Ermine/Match/: Monad.hs
src/Ermine/Monitor/: Combinators.hs  Exception.hs  Options.hs
src/Ermine/Parser/: Data.hs  DataType.hs  Global.hs  Keywords.hs  Kind.hs  Literal.hs  Module.hs  Pat.hs  Pattern.hs  Resolver.hs  State.hs  Style.hs  Term.hs  Type.hs
src/Ermine/Pattern/: Env.hs  Matching.hs  Matrix.hs
src/Ermine/Pretty/: Core.hs  Crux.hs  G.hs  Global.hs  Id.hs  Kind.hs  Literal.hs  Pattern.hs  Term.hs  Type.hs
src/Ermine/Syntax/: .swp  Binary.hs  Class.hs  Constructor.hs  Convention.hs  Core.hs  Crux.hs  Data.hs  DataType.hs  Digest.hs  Digest.hsc  Exposed.hs  G.hs  Global.hs  Hashable.hs  Head.hs  Hint.hs  Id.hs  Instance.hs  Kind.hs  Literal.hs  Module.hs  ModuleName.hs  Name.hs  Pat.hs  Pattern.hs  Prim.hs  Resolver.hs  Scope.hs  Sort.hs  Term.hs  Type.hs
src/Ermine/Type/: Builtin.hs  Inference.hs  Unification.hs
src/Ermine/Unification/: Class.hs  Data.hs  DataType.hs  Kind.hs  Meta.hs  Sharing.hs  Type.hs
stdlib/Prelude/: Bool.e  Byte.e  Constraint.e  Currency.e  DB.e  Date.e  DateRange.e  Double.e  Either.e  Eq.e  Error.e  Field.e  File.e  Float.e  Function.e  GUID.e  Header.e  IO.e  Int.e  List.e  Long.e  Map.e  Math.e  Maybe.e  Native.e  Nullable.e  Num.e  Ord.e  Pair.e  Parse.e  Prelude.e  Prim.e  Primitive.e  Random.e  Record.e  Relation.e  Ring.e  Runners.e  Scanners.e  Short.e  (+6 more)
stdlib/Prelude/Control/: Alt.e  Ap.e  Category.e  Comonad.e  Functor.e  Monad.e  Monoid.e  Traversable.e
stdlib/Prelude/Data/: Cofree.e  Free.e  Nu.e
stdlib/Prelude/Field/: Type.e
stdlib/Prelude/Foreign/: Iteratee.e
stdlib/Prelude/Function/: Endo.e
stdlib/Prelude/IO/: CSV.e  DB.e  Unsafe.e
stdlib/Prelude/List/: NonEmpty.e  Stream.e  Util.e
stdlib/Prelude/Native/: Bool.e  Class.e  Either.e  Error.e  Exception.e  Function.e  List.e  Map.e  Maybe.e  NonEmpty.e  Object.e  Ord.e  Pair.e  Record.e  Relation.e  Serializable.e  Stream.e  Throwable.e  TraversableColumns.e
stdlib/Prelude/Relation/: Aggregate.e  Op.e  Predicate.e  RTree.e  Row.e  Scan.e  Sort.e  UnifyFields.e
stdlib/Prelude/Syntax/: Do.e  Either.e  (+7 more)
tests/: BinaryProperties.hs  VarProperties.hs  doctests.hs  doctests.hsc  properties.hs  unittests.hs
tests/Properties/: Binary.hs  Var.hs
tests/properties/: Arbitrary.hs  Binary.hs  Inference.hs  Loader.hs  Parser.hs  Parser2.hs  Pattern.hs  Syntax.hs
tests/unit-tests/: LoaderTests.hs  ParserTests.hs  TestDef.hs  UnitTests.hs
(+26 files in other folders)
