name:          ermine
category:      Compiler
version:       0.6
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/ermine
bug-reports:   http://github.com/ekmett/ermine/issues
copyright:     Copyright (C) 2010-2013 S&P Capital IQ
synopsis:      Ermine
description:
    This is a port of the compiler for the Ermine functional programming language from Scala.
    .
    >                                     _,-/"---,
    >             ;"""""""""";          _`;; ""  «@`---v
    >            ; :::::  ::  "'      _` ;;  "    _.../
    >           ;"     ;;  ;;;  '",-`::    ;;,'""""
    >          ;"          ;;;;.  ;;  ;;;  ::`    ____
    >         ,/ / ;;  ;;;______;;;  ;;; ::,`    / __/_____ _  ( )__  __
    >         /;; _;;   ;;;       ;       ;     / _//`__/  ' \/ /`_ \/ -)
    >         | :/ / ,;'           ;_ "")/     /___/_/ /_/_/_/_/_//_/\__/ 0.6
    >         ; ; / /"""=            \;;\\""=  Copyright © 2010-13 S&P Capital IQ
    >      ;"""';\::""""""=            \\"""=
    >      \/"""
    .
    <<overview.png>>

build-type:    Custom
extra-source-files:
  .travis.yml
  .vim.custom
  .gitignore
  images/overview.png
  scripts/overview.sh
  README.markdown
  CHANGELOG.markdown

data-files:
  data/logo.txt
  data/logos.txt

source-repository head
  type: git
  location: git://github.com/ekmett/ermine.git

-- `cabal install --enable-tests -f-doctests` to disable doctest suite
flag doctests
  manual: True
  default: True

-- `cabal install --enable-tests -f-properties` to disable properties suite
flag properties
  manual: True
  default: True

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

-- `cabal install -f-repl` to disable compiling the repl
flag repl
  manual: True
  default: True

flag q
  manual: True
  default: False

library
  hs-source-dirs: src

  exposed-modules:
    Ermine
    Ermine.Builtin.Pattern
    Ermine.Builtin.Term
    Ermine.Builtin.Type
    Ermine.Diagnostic
    Ermine.Inference.Kind
    Ermine.Inference.Type
    Ermine.Inference.Witness
    Ermine.Parser.Keywords
    Ermine.Parser.Kind
    Ermine.Parser.Pattern
    Ermine.Parser.Style
    Ermine.Parser.Type
    Ermine.Parser.Term
    Ermine.Pretty
    Ermine.Pretty.Global
    Ermine.Pretty.Kind
    Ermine.Pretty.Literal
    Ermine.Pretty.Pattern
    Ermine.Pretty.Term
    Ermine.Pretty.Type
    Ermine.Syntax
    Ermine.Syntax.Core
    Ermine.Syntax.Digest
    Ermine.Syntax.Exposed
    Ermine.Syntax.Global
    Ermine.Syntax.Head
    Ermine.Syntax.Hint
    Ermine.Syntax.Id
    Ermine.Syntax.Instance
    Ermine.Syntax.Kind
    Ermine.Syntax.Pattern
    Ermine.Syntax.Literal
    Ermine.Syntax.Scope
    Ermine.Syntax.Term
    Ermine.Syntax.Type
    Ermine.Unification.Kind
    Ermine.Unification.Meta
    Ermine.Unification.Sharing
    Ermine.Unification.Type
    Ermine.Version

  -- console haddocks
  exposed-modules:
    Ermine.Console.Command
    Ermine.Console.Completion
    Ermine.Console.Options
    Ermine.Console.State
    Ermine.Console.Unicode

  build-depends:
    ansi-terminal             >= 0.6     && < 0.7,
    ansi-wl-pprint            >= 0.6.6   && < 0.7,
    base                      >= 4       && < 5,
    bifunctors                == 3.*,
    binary                    == 0.5.*,
    bound                     >= 0.8     && < 1,
    bytes                     >= 0.6     && < 1,
    bytestring                >= 0.9     && < 0.11,
    cereal                    >= 0.3.5.2 && < 0.4,
    crypto-api                >= 0.10.2  && < 0.11,
    cryptohash                >= 0.8.3   && < 0.9,
    comonad                   >= 3,
    containers                >= 0.3     && < 0.6,
    data-default              >= 0.4     && < 0.6,
    ekg                       >= 0.3     && < 0.4,
    filepath                  >= 1.3     && < 1.4,
    ghc-prim,
    hashable                  >= 1.1     && < 1.3,
    hashable-extras           >= 0.1     && < 1,
    haskeline                 >= 0.7.0.3 && < 0.8,
    hyphenation               >= 0.2.1.7 && < 0.3,
    lens                      >= 3.9     && < 4,
    MonadCatchIO-transformers >= 0.3     && < 0.4,
    mtl                       >= 2.1.1   && < 2.2,
    monad-st                  >= 0.2.2   && < 1,
    optparse-applicative      >= 0.5.2.1 && < 0.6,
    parsers                   >= 0.5     && < 1,
    prelude-extras            >= 0.3     && < 1,
    random                    >= 1.0.0.3 && < 1.1,
    semigroupoids             >= 3.0.2   && < 4,
    semigroups                >= 0.9     && < 1,
    split                     >= 0.2.1.1 && < 0.3,
    time                      == 1.4.*,
    transformers              >= 0.2     && < 0.4,
    trifecta                  == 1.*,
    unordered-containers      >= 0.2.3   && < 0.3,
    utf8-string               >= 0.3.7   && < 0.4,
    vector                    >= 0.10    && < 0.11,
    void                      >= 0.6     && < 1

  other-modules: Paths_ermine
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  if flag(q)
    ghc-options: -v0


executable ermine
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  if !flag(repl)
    buildable: False
  else
    build-depends:
      base < 5,
      bytestring,
      containers,
      data-default,
      ekg,
      ermine,
      filepath,
      haskeline,
      lens,
      MonadCatchIO-transformers,
      mtl,
      optparse-applicative,
      unordered-containers

-- Verify the properties of lenses with QuickCheck
test-suite properties
  type:           exitcode-stdio-1.0
  main-is:        properties.hs
  ghc-options:    -w -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs: . properties
  other-modules:
    Arbitrary
    Binary
    Syntax
    Var

  if !flag(properties)
    buildable: False
  else
    build-depends:
      base,
      binary,
      bound,
      bytestring,
      ermine,
      lens,
      prelude-extras,
      QuickCheck                 >= 2.4,
      quickcheck-instances       >= 0.3.1,
      tagged                     >= 0.4.4 && < 1,
      test-framework             >= 0.6,
      test-framework-quickcheck2 >= 0.2,
      test-framework-th          >= 0.2,
      transformers

-- Verify the results of the examples
test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded -v0
  hs-source-dirs: tests

  if !flag(doctests)
    buildable: False
  else
    build-depends:
      base,
      bytestring,
      containers,
      directory >= 1.0,
      doctest >= 0.9.1,
      ermine,
      filepath,
      groom >= 0.1.1 && < 0.2,
      MonadCatchIO-transformers,
      mtl

  if impl(ghc<7.6.1)
    ghc-options: -Werror
