name:          ermine
category:      Compiler
version:       0.6
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/ermine
bug-reports:   http://github.com/ekmett/ermine/issues
copyright:     Copyright (C) 2010-2014 McGraw Hill Financial
synopsis:      Ermine
description:
    This is a port of the compiler for the Ermine functional programming language from Scala.
    .
    >                                     _,-/"---,
    >             ;"""""""""";          _`;; ""  <@`---v
    >            ; :::::  ::  "'      _` ;;  "    _.../
    >           ;"     ;;  ;;;  '",-`::    ;;,'""""
    >          ;"          ;;;;.  ;;  ;;;  ::`    ____
    >         ,/ / ;;  ;;;______;;;  ;;; ::,`    / __/_____ _  ( )__  __
    >         /;; _;;   ;;;       ;       ;     / _//`__/  ' \/ /`_ \/ -)
    >         | :/ / ,;'           ;_ "")/     /___/_/ /_/_/_/_/_//_/\__/ 0.6
    >         ; ; / /"""=            \;;\\""=  Copyright (C) 2010-14 McGraw Hill Financial
    >      ;"""';\::""""""=            \\"""=
    >      \/"""
    .
    <<overview.png>>
    .
    For more information, you can watch the <https://www.youtube.com/watch?v=o3m2NkusI9k Presentation by Edward Kmett> at CUFP 2013 about the genesis and goals of Ermine.

build-type:    Custom
extra-source-files:
  .travis.yml
  .vim.custom
  .gitignore
  images/overview.png
  scripts/overview.sh
  README.markdown
  CHANGELOG.markdown
  data/logo.txt
  data/logos.txt

source-repository head
  type: git
  location: git://github.com/ekmett/ermine.git

flag ekg
  manual: True
  default: False

-- `cabal install --enable-tests -f-doctests` to disable doctest suite
flag doctests
  manual: True
  default: True

-- `cabal install --enable-tests -f-properties` to disable properties suite
flag properties
  manual: True
  default: True

-- `cabal instll -fj` to enable parallel builds. This may trigger open issues in GHC!
flag j
  manual: True
  default: False

-- `cabal install --enable-tests -f-hlint` to disable properties suite
flag hlint
  manual: True
  default: True

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

-- `cabal install -f-core-echo` disables building the core-echo tool.
flag core-echo
  manual: True
  default: True

-- `cabal install -f-repl` to disable compiling the repl
flag repl
  manual: True
  default: True

-- `cabal install -fq` to quiet down the build messages
flag q
  manual: True
  default: False

library
  hs-source-dirs: src

  exposed-modules:
    Ermine
    Ermine.Builtin.Core
    Ermine.Builtin.Pattern
    Ermine.Builtin.Term
    Ermine.Builtin.Type
    Ermine.Diagnostic
    Ermine.Inference.Discharge
    Ermine.Inference.Kind
    Ermine.Inference.Type
    Ermine.Inference.Witness
    Ermine.Monitor
    Ermine.Optimizer
    Ermine.Parser.DataType
    Ermine.Parser.Global
    Ermine.Parser.Keywords
    Ermine.Parser.Kind
    Ermine.Parser.Literal
    Ermine.Parser.Pattern
    Ermine.Parser.Style
    Ermine.Parser.Type
    Ermine.Parser.Term
    Ermine.Pattern
    Ermine.Pattern.Env
    Ermine.Pattern.Matching
    Ermine.Pattern.Matrix
    Ermine.Pretty
    Ermine.Pretty.Core
    Ermine.Pretty.Global
    Ermine.Pretty.Kind
    Ermine.Pretty.Literal
    Ermine.Pretty.Pattern
    Ermine.Pretty.Term
    Ermine.Pretty.Type
    Ermine.Syntax
    Ermine.Syntax.Class
    Ermine.Syntax.Core
    Ermine.Syntax.DataType
    Ermine.Syntax.Digest
    Ermine.Syntax.Exposed
    Ermine.Syntax.Global
    Ermine.Syntax.Head
    Ermine.Syntax.Hint
    Ermine.Syntax.Id
    Ermine.Syntax.Instance
    Ermine.Syntax.Kind
    Ermine.Syntax.Module
    Ermine.Syntax.ModuleName
    Ermine.Syntax.Name
    Ermine.Syntax.Pattern
    Ermine.Syntax.Literal
    Ermine.Syntax.Scope
    Ermine.Syntax.Term
    Ermine.Syntax.Type
    Ermine.Unification.DataType
    Ermine.Unification.Kind
    Ermine.Unification.Meta
    Ermine.Unification.Sharing
    Ermine.Unification.Type
    Ermine.Version

  -- console haddocks
  exposed-modules:
    Ermine.Console.Command
    Ermine.Console.Completion
    Ermine.Console.Options
    Ermine.Console.State
    Ermine.Console.Unicode

  build-depends:
    ansi-terminal             >= 0.6,
    ansi-wl-pprint            >= 0.6.6,
    base                      >= 4,
    bifunctors                >= 4.1.1,
    binary                    >= 0.7.1,
    bound                     >= 0.9,
    bytes                     >= 0.11,
    bytestring                >= 0.10,
    cereal                    >= 0.4.0.1,
    comonad                   >= 4,
    containers                >= 0.5,
    cryptohash                >= 0.11,
    data-default              >= 0.5,
    filepath                  >= 1.3,
    file-embed                >= 0.0.6,
    ghc-prim,
    hashable                  >= 1.2,
    hashable-extras           >= 0.1.3,
    haskeline                 >= 0.7.0.3,
    hyphenation               >= 0.4,
    lens                      >= 4.0.5,
    MonadCatchIO-transformers >= 0.3,
    mtl                       >= 2.1,
    monad-st                  >= 0.2.3,
    optparse-applicative      >= 0.7.0.2,
    parsers                   >= 0.8,
    prelude-extras            >= 0.3,
    process                   >= 1.1,
    random                    >= 1.0.0.3,
    semigroupoids             >= 4,
    semigroups                >= 0.9,
    split                     >= 0.2.1.1,
    tagged                    >= 0.7,
    text                      >= 1.1,
    time                      == 1.4.*,
    transformers              >= 0.3,
    trifecta                  >= 1.4.1,
    unordered-containers      >= 0.2.3,
    utf8-string               >= 0.3.7,
    vector                    >= 0.10,
    void                      >= 0.6

  if flag(ekg)
    build-depends: ekg >= 0.3     && < 0.4
    hs-source-dirs: src-opt/ekg
  else
    hs-source-dirs: src-opt/no-ekg

  other-modules: Paths_ermine
  ghc-options: -Wall

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2
  else
    ghc-options: -O0

  if flag(q)
    ghc-options: -v0

  if flag(j) && impl(ghc >= 7.8)
    ghc-options: -j3

executable core-echo
  hs-source-dirs: echo
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2
  else
    ghc-options: -O0

  if !flag(core-echo)
    buildable: False
  else
    build-depends:
      base < 5,
      binary,
      bytestring,
      containers,
      data-default,
      ermine,
      filepath,
      haskeline,
      lens,
      MonadCatchIO-transformers,
      mtl,
      optparse-applicative,
      text,
      unordered-containers

executable ermine
  hs-source-dirs: repl
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2
  else
    ghc-options: -O0

  if flag(ekg)
    build-depends: ekg
    ghc-options: -with-rtsopts=-T

  if !flag(repl)
    buildable: False
  else
    build-depends:
      base < 5,
      bytestring,
      containers,
      data-default,
      ermine,
      filepath,
      haskeline,
      lens,
      MonadCatchIO-transformers,
      mtl,
      optparse-applicative,
      unordered-containers

-- Verify the properties of lenses with QuickCheck
test-suite properties
  type:           exitcode-stdio-1.0
  main-is:        properties.hs
  ghc-options:    -w -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs: . properties

  if flag(j) && impl(ghc >= 7.8)
    ghc-options: -j3

  other-modules:
    Arbitrary
    Binary
    Inference
    PatCompiler
    Syntax
    Var

  if !flag(properties)
    buildable: False
  else
    build-depends:
      base,
      binary,
      bound,
      bytestring,
      containers,
      ermine,
      lens,
      monad-st,
      prelude-extras,
      QuickCheck                 >= 2.4,
      quickcheck-instances       >= 0.3.1,
      tagged                     >= 0.4.4 && < 1,
      test-framework             >= 0.6,
      test-framework-quickcheck2 >= 0.2,
      test-framework-th          >= 0.2,
      transformers,
      unordered-containers,
      void                       >= 0.6     && < 1


test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests

  if !flag(hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

-- Verify the results of the examples
test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded -v0
  hs-source-dirs: tests

  if !flag(doctests)
    buildable: False
  else
    build-depends:
      base,
      bytestring,
      containers,
      directory >= 1.0,
      doctest >= 0.9.1,
      file-embed,
      filepath,
      groom >= 0.1.1 && < 0.2,
      MonadCatchIO-transformers,
      mtl

  if impl(ghc<7.6.1)
    ghc-options: -Werror
