name:          ermine
category:      Compiler
version:       0.6
license:       BSD2
cabal-version: >= 1.16
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/ermine
bug-reports:   http://github.com/ekmett/ermine/issues
copyright:     Copyright (C) 2010-2014 McGraw Hill Financial
synopsis:      Ermine
description:
    This is a port of the compiler for the Ermine functional programming language from Scala.
    .
    >                                     _,-/"---,
    >             ;"""""""""";          _`;; ""  <@`---v
    >            ; :::::  ::  "'      _` ;;  "    _.../
    >           ;"     ;;  ;;;  '",-`::    ;;,'""""
    >          ;"          ;;;;.  ;;  ;;;  ::`    ____
    >         ,/ / ;;  ;;;______;;;  ;;; ::,`    / __/_____ _  ( )__  __
    >         /;; _;;   ;;;       ;       ;     / _//`__/  ' \/ /`_ \/ -)
    >         | :/ / ,;'           ;_ "")/     /___/_/ /_/_/_/_/_//_/\__/ 0.6
    >         ; ; / /"""=            \;;\\""=  Copyright (C) 2010-14 McGraw Hill Financial
    >      ;"""';\::""""""=            \\"""=
    >      \/"""
    .
    <<overview.png>>
    .
    For more information, you can watch the <https://www.youtube.com/watch?v=o3m2NkusI9k Presentation by Edward Kmett> at CUFP 2013 about the genesis and goals of Ermine.

build-type:    Custom
extra-source-files:
  .travis.yml
  .vim.custom
  .gitignore
  README.markdown
  CHANGELOG.markdown
  bin/overview.sh
  etc/logo.txt
  etc/logos.txt
  etc/overview.png
  opt/ekg/Ermine/Monitor.hs
  opt/no-ekg/Ermine/Monitor.hs

source-repository head
  type: git
  location: git://github.com/ekmett/ermine.git

flag ekg
  manual: True
  default: True

-- `cabal install --enable-tests -f-doctests` to disable doctest suite
flag doctests
  manual: True
  default: True

-- `cabal install --enable-tests -f-properties` to disable properties suite
flag properties
  manual: True
  default: True

-- `cabal instll -fj` to enable parallel builds. This may trigger open issues in GHC!
flag j
  manual: True
  default: False

-- `cabal install --enable-tests -f-hlint` to disable properties suite
flag hlint
  manual: True
  default: True

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

-- `cabal install -f-core-echo` disables building the core-echo tool.
flag core-echo
  manual: True
  default: True

-- `cabal install -f-repl` to disable compiling the repl
flag repl
  manual: True
  default: True

-- `cabal install -fq` to quiet down the build messages
flag q
  manual: True
  default: False

library
  default-language: Haskell2010
  hs-source-dirs: src

  exposed-modules:
    Ermine.Builtin.Core
    Ermine.Builtin.Global
    Ermine.Builtin.Head
    Ermine.Builtin.Pattern
    Ermine.Builtin.Term
    Ermine.Builtin.Type
    Ermine.Console.Command
    Ermine.Console.Completion
    Ermine.Console.Options
    Ermine.Console.State
    Ermine.Console.Unicode
    Ermine.Constraint.Env
    Ermine.Constraint.Simplification
    Ermine.Core.Lint
    Ermine.Core.Module
    Ermine.Core.Optimizer
    Ermine.Core.Compiler
    Ermine.Diagnostic
    Ermine.Inference.Kind
    Ermine.Inference.Type
    Ermine.Inference.Witness
    Ermine.Interpreter
    Ermine.Loader.Core
    Ermine.Loader.Filesystem
    Ermine.Monitor
    Ermine.Monitor.Combinators
    Ermine.Monitor.Exception
    Ermine.Monitor.Options
    Ermine.Parser.Data
    Ermine.Parser.Global
    Ermine.Parser.Keywords
    Ermine.Parser.Kind
    Ermine.Parser.Literal
    Ermine.Parser.Module
    Ermine.Parser.Pattern
    Ermine.Parser.State
    Ermine.Parser.Style
    Ermine.Parser.Type
    Ermine.Parser.Term
    Ermine.Pattern.Env
    Ermine.Pattern.Matching
    Ermine.Pattern.Matrix
    Ermine.Pretty
    Ermine.Pretty.Core
    Ermine.Pretty.G
    Ermine.Pretty.Global
    Ermine.Pretty.Kind
    Ermine.Pretty.Literal
    Ermine.Pretty.Pattern
    Ermine.Pretty.Term
    Ermine.Pretty.Type
    Ermine.Syntax
    Ermine.Syntax.Class
    Ermine.Syntax.G
    Ermine.Syntax.Constructor
    Ermine.Syntax.Convention
    Ermine.Syntax.Core
    Ermine.Syntax.Data
    Ermine.Syntax.Digest
    Ermine.Syntax.Global
    Ermine.Syntax.Head
    Ermine.Syntax.Hint
    Ermine.Syntax.Id
    Ermine.Syntax.Instance
    Ermine.Syntax.Kind
    Ermine.Syntax.Module
    Ermine.Syntax.ModuleName
    Ermine.Syntax.Name
    Ermine.Syntax.Pattern
    Ermine.Syntax.Literal
    Ermine.Syntax.Scope
    Ermine.Syntax.Sort
    Ermine.Syntax.Term
    Ermine.Syntax.Type
    Ermine.Unification.Class
    Ermine.Unification.Data
    Ermine.Unification.Kind
    Ermine.Unification.Meta
    Ermine.Unification.Sharing
    Ermine.Unification.Type
    Ermine.Version

  build-depends:
    adjunctions               >= 4.0.3,
    ansi-wl-pprint            >= 0.6.6,
    base                      >= 4,
    bifunctors                >= 4.1.1,
    binary                    >= 0.7.1,
    bound                     >= 1.0.3,
    bytes                     >= 0.11,
    bytestring                >= 0.10,
    cereal                    >= 0.4.0.1,
    comonad                   >= 4,
    containers                >= 0.5,
    cryptohash                >= 0.11,
    data-default              >= 0.5,
    directory                 >= 1.2.1.0,
    distributive              >= 0.4.1,
    exceptions                >= 0.4,
    filepath                  >= 1.3,
    file-embed                >= 0.0.6,
    ghc-prim,
    groom                     >= 0.1.2,
    hashable                  >= 1.2,
    hashable-extras           >= 0.1.3,
    haskeline                 >= 0.7.0.3,
    hyphenation               >= 0.4,
    lens                      >= 4.4,
    mtl                       >= 2.1,
    monad-st                  >= 0.2.3,
    optparse-applicative      >= 0.11,
    parsers                   >= 0.8,
    prelude-extras            >= 0.3,
    primitive                 >= 0.5.2.1,
    profunctors               >= 4.2,
    random                    >= 1.0.0.3,
    semigroups                >= 0.9,
    split                     >= 0.2.1.1,
    tagged                    >= 0.7,
    text                      >= 1.1,
    time                      >= 1.4,
    transformers              >= 0.3,
    transformers-compat       >= 0.3,
    trifecta                  >= 1.4.1,
    unordered-containers      >= 0.2.3,
    utf8-string               >= 0.3.7,
    vector                    >= 0.10,
    void                      >= 0.6

  if flag(ekg)
    build-depends:
      ekg      >= 0.4 && < 0.5,
      process  >= 1.2 && < 1.3
    hs-source-dirs: opt/ekg
  else
    hs-source-dirs: opt/no-ekg

  other-modules: Paths_ermine
  ghc-options: -Wall

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2
  else
    ghc-options: -O0

  if flag(q)
    ghc-options: -v0

  if flag(j) && impl(ghc >= 7.8)
    ghc-options: -j3

executable core-echo
  default-language: Haskell2010
  hs-source-dirs: exe/core-echo
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2
  else
    ghc-options: -O0

  if !flag(core-echo)
    buildable: False
  else
    build-depends:
      base < 5,
      binary,
      bytestring,
      ermine

executable ermine
  default-language: Haskell2010
  hs-source-dirs: exe/repl
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -v0

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2
  else
    ghc-options: -O0

  if flag(ekg)
    ghc-options: -with-rtsopts=-T

  if !flag(repl)
    buildable: False
  else
    build-depends:
      base < 5,
      data-default,
      ermine,
      haskeline,
      lens,
      mtl,
      optparse-applicative

test-suite unit-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          UnitTests.hs
  ghc-options:      -w -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs:   tests/unit-tests

  if flag(j) && impl(ghc >= 7.8)
    ghc-options: -j3

  other-modules:
    LoaderTests
    ParserTests
    TestDef

  if !flag(properties)
    buildable: False
  else
    build-depends:
      base,
      ermine,
      filemanip             >= 0.3.6.2,
      filepath,
      lens,
      HUnit,
      test-framework        >= 0.6,
      test-framework-hunit,
      text,
      transformers-compat

-- Verify properties with QuickCheck
test-suite properties
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          properties.hs
  ghc-options:      -w -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs:   tests tests/properties

  if flag(j) && impl(ghc >= 7.8)
    ghc-options: -j3

  other-modules:
    Arbitrary
    Binary
    Inference
    Loader
    Pattern
    Syntax
    Var

  if !flag(properties)
    buildable: False
  else
    build-depends:
      base,
      binary,
      bound,
      bytestring,
      containers,
      ermine,
      lens,
      monad-st,
      prelude-extras,
      QuickCheck                 >= 2.4,
      quickcheck-instances       >= 0.3.1,
      test-framework             >= 0.6,
      test-framework-quickcheck2 >= 0.2,
      test-framework-th          >= 0.2,
      transformers,
      void                       >= 0.6     && < 1


test-suite hlint
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          hlint.hs
  ghc-options:      -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   tests

  if !flag(hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

-- Verify the results of the examples
test-suite doctests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  ghc-options:      -Wall -threaded -v0
  hs-source-dirs:   tests

  if !flag(doctests)
    buildable: False
  else
    build-depends:
      base,
      directory >= 1.0,
      doctest >= 0.9.1,
      filepath

  if impl(ghc<7.6.1)
    ghc-options: -Werror
